Update .env of frontend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,7 @@
 VITE_SLACK_CLIENT_ID=9309003919574.9318713485346
 VITE_SLACK_REDIRECT_URI= https://pig-cool-jay.ngrok-free.app/api/auth/slack/callback
 
-VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL = https://slack-connect-backend-inxd.onrender.com
+
 
 
