--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,6 @@
 VITE_SLACK_CLIENT_ID=9309003919574.9318713485346
-VITE_SLACK_REDIRECT_URI= https://pig-cool-jay.ngrok-free.app/api/auth/slack/callback
-
-VITE_BACKEND_URL = https://slack-connect-backend-inxd.onrender.com
+VITE_SLACK_REDIRECT_URI=https://slack-connect-backend-inxd.onrender.com/api/auth/slack/callback
+VITE_BACKEND_URL=https://slack-connect-backend-inxd.onrender.com
 
 
 
